--- a/style.css
+++ b/style.css
@@ -175,14 +175,14 @@ h1 {
 .main-article p{
   color:var(--color5);
   font-size:0.95rem;
-  line-height:1.7rem;
+  line-height:1.6rem;
 }
 #read-more {
   background:var(--color2);
   outline:none;
   border:none;
-  padding:1rem 2.5rem;
-  letter-spacing:0.4rem;
+  padding:1rem 1.8rem;
+  letter-spacing:0.3rem;
   text-transform: uppercase;
   color:white;
   font-weight: 700;
@@ -197,7 +197,7 @@ h1 {
 aside {
   background: var(--color6);
   color:white;
-  padding:1.5rem 1.563rem;
+  padding:1.7rem 1.5rem;
 }
 aside h2 {
   color: var(--color1);
@@ -207,7 +207,7 @@ aside h2 {
 aside ul li {
   list-style: none;
   border-bottom: 1px solid var(--color5);
-  padding:1.5rem 0;
+  padding:1.71rem 0;
 }
 aside ul li:last-child{
   border:none;
@@ -220,13 +220,13 @@ aside ul li a {
 }
 aside ul li h3 {
   margin-bottom:0.7em;
-  font-size:1.1rem;
+  font-size:1.25rem;
   color:white;
   transition: color 0.5s ease;
 }
 aside ul li a p {
-  font-size:0.9rem;
-  line-height:1.7rem;
+  font-size:0.95rem;
+  line-height:1.6rem;
   color:var(--color4);
 }
 aside ul li a:hover h3, aside ul li a:focus h3{
@@ -240,7 +240,7 @@ aside ul li a:hover h3, aside ul li a:focus h3{
 .related-article-item {
   display:grid;
   grid-template-columns: 6.25rem auto;
-  gap:2rem;
+  gap:1.65rem;
   /* margin-top:3rem; */
 }
 .related-articles img, .related-articles picture {
@@ -251,7 +251,7 @@ aside ul li a:hover h3, aside ul li a:focus h3{
   text-decoration: none;
 }
 .related-article-item h2{
-  font-size:1rem;
+  font-size:1.1rem;
   font-weight:800;
   color:var(--color6);
   margin-bottom:0.7rem;
@@ -261,11 +261,12 @@ aside ul li a:hover h3, aside ul li a:focus h3{
   display:block;
   color:var(--color4);
   font-size:2rem;
+  line-height:1.8rem;
   font-weight:600;
-  margin-bottom:0.7rem;
+  margin-bottom:1rem;
 }
 .related-article-item p{
-  font-size:0.9rem;
+  font-size:0.93rem;
   line-height:1.5rem;
   color:var(--color5);
 }
@@ -292,19 +293,20 @@ footer p a { color: inherit; }
   }
   .top-bar {
     max-width:69.375rem;
-    margin:0 auto 3rem auto;
+    margin:0 auto 3.5rem auto;
+    align-items:center;
   }
   #top-nav ul {
     display:flex;
-    gap:2.5rem;
+    gap:2.4rem; 
   }
   #top-nav ul li a {
     color: var(--color5);
-    font-size:1rem;
+    font-size:0.99rem;
     font-weight:400;
   }
   .main-holder {
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 2.1fr 1fr;
   }
   main {
     max-width: 45.625rem;
@@ -314,7 +316,7 @@ footer p a { color: inherit; }
     display:grid;
     grid-template-columns: 1fr 1fr;
     gap:2rem;
-    margin-top:2rem;
+    margin-top:2.2rem;
   }
   .text-body {
     display:grid;
@@ -324,7 +326,7 @@ footer p a { color: inherit; }
   }
   h1 {
     font-size:3.5rem;
-    line-height:3.7rem;
+    line-height:3.6rem;
     margin:0;
   }
   #read-more {
@@ -337,7 +339,7 @@ footer p a { color: inherit; }
   .related-articles {
     max-width:100%;
     grid-template-columns: 1fr 1fr 1fr;
-    margin-top:5rem;
+    margin-top:4.5rem;
   }
   
   footer {position:fixed; bottom:0%; left: 42%;}
